src/test/deca/context/invalid/homemade/tests/test374_appel_methode_mauvais_nobre_param.deca
// test invalide de la règle 3.74


class A{
    int x = 3;
    void calcul(int valeur, int valeur2){
        this.x = valeur *valeur2;
    }
}

{
    A a = new A();
    a.calcul(3);
}